--- a/public/styles/styles/_welcome.scss
+++ b/public/styles/styles/_welcome.scss
@@ -18,15 +18,11 @@ a {
 }
 
 canvas {
+  position: absolute;
+  height: 100%;
+  width: 100%;
   z-index: 0;
-  width: inherit;
-  height: inherit;
-  padding: 10px;
   background-image: url('../asset/section1Background.png');
   background-size: 100% 100%;
-}
-
-.welcome-container {
-  width: 100%;
-  height: 100%;
+  background-repeat: no-repeat;
 }
